--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -115,10 +115,12 @@ body {
   }
 }
 .headline__text {
+  display: block;
   -webkit-transform: translateY(100%);
           transform: translateY(100%);
 }
 .headline__split--wrap {
+  display: block;
   position: relative;
   -webkit-transform: translateY(100%);
           transform: translateY(100%);
@@ -1129,14 +1131,10 @@ body {
   }
 }
 .intro__desc--big {
-  font-size: 22px;
+  font-size: 18px;
+  font-weight: 600;
   line-height: 1.6;
   letter-spacing: -1px;
-}
-@media (max-width: 1024px) {
-  .intro__desc--big {
-    font-size: 18px;
-  }
 }
 @media (max-width: 767px) {
   .intro__desc--big {
@@ -1841,6 +1839,7 @@ body {
           transform: translateY(100%);
 }
 .vision__split--wrap {
+  display: block;
   position: relative;
   -webkit-transform: translateY(100%);
           transform: translateY(100%);
@@ -1879,6 +1878,7 @@ body {
   height: clamp(100px, 8vw, 154px);
   border-radius: 0.42vw;
   border: 1px solid #f8f8f8;
+  background: rgba(255, 255, 255, 0.2);
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
@@ -1898,6 +1898,7 @@ body {
 .vision__keyword {
   font-size: clamp(12px, 0.83vw, 16px);
   line-height: 1.5;
+  text-shadow: 1px 1px 8px rgba(0, 0, 0, 0.7);
 }
 @media (max-width: 767px) {
   .vision__keyword {
